Add the most utilized hosts and most utilized VMs in dashboard

--- a/moVirt/src/main/res/values/strings.xml
+++ b/moVirt/src/main/res/values/strings.xml
@@ -158,5 +158,7 @@
     <string name="ghz_used">GHz Used</string>
     <string name="mb_used">MB Used</string>
     <string name="gb_used">GB Used</string>
+    <string name="most_utilized_vms">Most Utilized VMs</string>
+    <string name="most_utilized_hosts">Most Utilized Hosts</string>
 
 </resources>
